# ML-DL-SL-2025

./: readme.md
ISLP Book Exercises and Labs/02 Statistical Learning/: exercise2.ipynb
ISLP Book Exercises and Labs/03 Linear Regression/: exercise3.ipynb
ISLP Book Exercises and Labs/04 Classification/: exercise4.ipynb
ISLP Book Exercises and Labs/07 Moving Beyond Linearity/: exercise7.ipynb
ISLP Book Exercises and Labs/08 Tree-Based Methods/: exercise8.ipynb
ISLP Book Exercises and Labs/09 Support Vector Machines/: exercise9.ipynb
ISLP Book Exercises and Labs/10 Deep Learning/: exercise10.ipynb
ISLP Book Exercises and Labs/11 Survival Analysis and Censored Data/: exercise11.ipynb
ISLP Book Exercises and Labs/12 Unsupervised Learning/: exercise12.ipynb
ISLP Book Exercises and Labs/13 Multiple Testing/: exercise13.ipynb
ISLP Book Exercises and Labs/2 Statistical Learning/: exercise2.ipynb
ISLP Book Exercises and Labs/3 Linear Regression/: exercise3.ipynb
ISLP Book Exercises and Labs/4 Classification/: exercise4.ipynb
ISLP Book Exercises and Labs/5 Resampling Methods/: exercise5.ipynb
ISLP Book Exercises and Labs/6 Linear Model Selection and Regularization/: exercise6.ipynb
ISLP Book Exercises and Labs/7 Moving Beyond Linearity/: exercise7.ipynb
ISLP Book Exercises and Labs/8 Tree-Based Methods/: exercise8.ipynb
ISLP Book Exercises and Labs/9 Support Vector Machines/: exercise9.ipynb
Introduction to Deep Learning - MIT Press/01 - Feed-Forward Neural Nets/: Untitled.ipynb
LLMs/basic/: README.md  (+4 more)
neuroknife/: README.md  pyproject.toml
(+4 files in other folders)
